// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots UI|Desktop layout bottom Panel 1`] = `
<div
  class="css-1d2iskc"
>
  <div
    style="position:absolute;width:0;height:0;visibility:hidden;display:none"
  />
  <div>
    0 width or height
  </div>
</div>
`;

exports[`Storyshots UI|Desktop layout default 1`] = `
<div
  class="css-1d2iskc"
>
  <div
    style="position:absolute;width:0;height:0;visibility:hidden;display:none"
  />
  <div>
    0 width or height
  </div>
</div>
`;

exports[`Storyshots UI|Desktop layout full 1`] = `
<div
  class="css-1d2iskc"
>
  <div
    style="position:absolute;width:0;height:0;visibility:hidden;display:none"
  />
  <div>
    0 width or height
  </div>
</div>
`;

exports[`Storyshots UI|Desktop layout no Nav 1`] = `
<div
  class="css-1d2iskc"
>
  <div
    style="position:absolute;width:0;height:0;visibility:hidden;display:none"
  />
  <div>
    0 width or height
  </div>
</div>
`;

exports[`Storyshots UI|Desktop layout no Panel 1`] = `
<div
  class="css-1d2iskc"
>
  <div
    style="position:absolute;width:0;height:0;visibility:hidden;display:none"
  />
  <div>
    0 width or height
  </div>
</div>
`;

exports[`Storyshots UI|Desktop layout no Panel, no Nav 1`] = `
<div
  class="css-1d2iskc"
>
  <div
    style="position:absolute;width:0;height:0;visibility:hidden;display:none"
  />
  <div>
    0 width or height
  </div>
</div>
`;

exports[`Storyshots UI|Desktop layout page 1`] = `
<div
  class="css-1d2iskc"
>
  <div
    style="position:absolute;width:0;height:0;visibility:hidden;display:none"
  />
  <div>
    0 width or height
  </div>
</div>
`;

exports[`Storyshots UI|Mobile layout initial 0 1`] = `
<div
  class="css-1d2iskc"
>
  <div
    class="css-todx5r"
  >
    <div
      class="css-1jgx7oq"
    >
      <div
        class="css-mp73i8"
        color="hotpink"
      >
        <h2
          style="position:absolute;bottom:0;right:0;color:rgba(0,0,0,0.2);font-size:150px;line-height:150px;margin:-20px"
        >
          1
        </h2>
        <pre>
          {}
        </pre>
      </div>
    </div>
    <div
      class="css-2qvc95"
    >
      <div>
        <div>
          <div
            class="css-gdymhm"
            color="deepskyblue"
          >
            <h2
              style="position:absolute;bottom:0;right:0;color:rgba(0,0,0,0.2);font-size:150px;line-height:150px;margin:-20px"
            >
              1
            </h2>
            <pre>
              {
  "id": "iframe",
  "path": "/components/UI-DesktopLayout-noNav",
  "storyId": "UI-DesktopLayout-noNav",
  "location": "http://localhost:9011/?path=/components/UI-DesktopLayout-noNav",
  "viewMode": "components",
  "debug": {
    "initialActive": 0
  }
}
            </pre>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-xrgm2i"
    >
      <div>
        <div
          class="css-1golnfk"
          color="orangered"
        >
          <h2
            style="position:absolute;bottom:0;right:0;color:rgba(0,0,0,0.2);font-size:150px;line-height:150px;margin:-20px"
          >
            1
          </h2>
          <pre>
            {
  "hidden": false
}
          </pre>
        </div>
      </div>
    </div>
  </div>
  <nav
    class="css-134fi6m"
  >
    <button
      class="css-1ohsdcw"
    >
      Nav
    </button>
    <button
      class="css-1ohsdcw"
    >
      Preview
    </button>
    <button
      class="css-1ohsdcw"
    >
      Panel
    </button>
  </nav>
</div>
`;

exports[`Storyshots UI|Mobile layout initial 1 1`] = `
<div
  class="css-1d2iskc"
>
  <div
    class="css-todx5r"
  >
    <div
      class="css-1i1oalp"
    >
      <div
        class="css-mp73i8"
        color="hotpink"
      >
        <h2
          style="position:absolute;bottom:0;right:0;color:rgba(0,0,0,0.2);font-size:150px;line-height:150px;margin:-20px"
        >
          1
        </h2>
        <pre>
          {}
        </pre>
      </div>
    </div>
    <div
      class="css-uszo85"
    >
      <div>
        <div>
          <div
            class="css-gdymhm"
            color="deepskyblue"
          >
            <h2
              style="position:absolute;bottom:0;right:0;color:rgba(0,0,0,0.2);font-size:150px;line-height:150px;margin:-20px"
            >
              1
            </h2>
            <pre>
              {
  "id": "iframe",
  "path": "/components/UI-DesktopLayout-noNav",
  "storyId": "UI-DesktopLayout-noNav",
  "location": "http://localhost:9011/?path=/components/UI-DesktopLayout-noNav",
  "viewMode": "components",
  "debug": {
    "initialActive": 1
  }
}
            </pre>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-xrgm2i"
    >
      <div>
        <div
          class="css-1golnfk"
          color="orangered"
        >
          <h2
            style="position:absolute;bottom:0;right:0;color:rgba(0,0,0,0.2);font-size:150px;line-height:150px;margin:-20px"
          >
            1
          </h2>
          <pre>
            {
  "hidden": false
}
          </pre>
        </div>
      </div>
    </div>
  </div>
  <nav
    class="css-134fi6m"
  >
    <button
      class="css-1ohsdcw"
    >
      Nav
    </button>
    <button
      class="css-1ohsdcw"
    >
      Preview
    </button>
    <button
      class="css-1ohsdcw"
    >
      Panel
    </button>
  </nav>
</div>
`;

exports[`Storyshots UI|Mobile layout initial 2 1`] = `
<div
  class="css-1d2iskc"
>
  <div
    class="css-todx5r"
  >
    <div
      class="css-1i1oalp"
    >
      <div
        class="css-mp73i8"
        color="hotpink"
      >
        <h2
          style="position:absolute;bottom:0;right:0;color:rgba(0,0,0,0.2);font-size:150px;line-height:150px;margin:-20px"
        >
          1
        </h2>
        <pre>
          {}
        </pre>
      </div>
    </div>
    <div
      class="css-lcywom"
    >
      <div>
        <div>
          <div
            class="css-gdymhm"
            color="deepskyblue"
          >
            <h2
              style="position:absolute;bottom:0;right:0;color:rgba(0,0,0,0.2);font-size:150px;line-height:150px;margin:-20px"
            >
              1
            </h2>
            <pre>
              {
  "id": "iframe",
  "path": "/components/UI-DesktopLayout-noNav",
  "storyId": "UI-DesktopLayout-noNav",
  "location": "http://localhost:9011/?path=/components/UI-DesktopLayout-noNav",
  "viewMode": "components",
  "debug": {
    "initialActive": 2
  }
}
            </pre>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-aevxar"
    >
      <div>
        <div
          class="css-1golnfk"
          color="orangered"
        >
          <h2
            style="position:absolute;bottom:0;right:0;color:rgba(0,0,0,0.2);font-size:150px;line-height:150px;margin:-20px"
          >
            1
          </h2>
          <pre>
            {
  "hidden": false
}
          </pre>
        </div>
      </div>
    </div>
  </div>
  <nav
    class="css-134fi6m"
  >
    <button
      class="css-1ohsdcw"
    >
      Nav
    </button>
    <button
      class="css-1ohsdcw"
    >
      Preview
    </button>
    <button
      class="css-1ohsdcw"
    >
      Panel
    </button>
  </nav>
</div>
`;

exports[`Storyshots UI|Mobile layout page 1`] = `
<div
  class="css-1d2iskc"
>
  <div
    class="css-todx5r"
  >
    <div
      class="css-1i1oalp"
    >
      <div
        class="css-mp73i8"
        color="hotpink"
      >
        <h2
          style="position:absolute;bottom:0;right:0;color:rgba(0,0,0,0.2);font-size:150px;line-height:150px;margin:-20px"
        >
          1
        </h2>
        <pre>
          {}
        </pre>
      </div>
    </div>
    <div
      class="css-uszo85"
    >
      <div>
        <div
          hidden=""
        >
          <div
            class="css-gdymhm"
            color="deepskyblue"
          >
            <h2
              style="position:absolute;bottom:0;right:0;color:rgba(0,0,0,0.2);font-size:150px;line-height:150px;margin:-20px"
            >
              1
            </h2>
            <pre>
              {
  "id": "iframe",
  "path": "/components/UI-DesktopLayout-noNav",
  "storyId": "UI-DesktopLayout-noNav",
  "location": "http://localhost:9011/?path=/components/UI-DesktopLayout-noNav",
  "debug": {
    "initialActive": 1
  }
}
            </pre>
          </div>
        </div>
        <div
          class="css-51dwwk"
          color="cyan"
        >
          <h2
            style="position:absolute;bottom:0;right:0;color:rgba(0,0,0,0.2);font-size:150px;line-height:150px;margin:-20px"
          >
            1
          </h2>
          <pre>
            {}
          </pre>
        </div>
      </div>
    </div>
    <div
      class="css-xrgm2i"
    >
      <div
        hidden=""
      >
        <div
          class="css-1golnfk"
          color="orangered"
        >
          <h2
            style="position:absolute;bottom:0;right:0;color:rgba(0,0,0,0.2);font-size:150px;line-height:150px;margin:-20px"
          >
            1
          </h2>
          <pre>
            {
  "hidden": true
}
          </pre>
        </div>
      </div>
    </div>
  </div>
  <nav
    class="css-134fi6m"
  >
    <button
      class="css-1ohsdcw"
    >
      Nav
    </button>
    <button
      class="css-1ohsdcw"
    >
      settings
    </button>
  </nav>
</div>
`;
